renamed `landingPage` schema component into `capabilities`; renamed `confClasses` schema component into `conformanceDeclaration`
