# s2gos/common/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-06-22T18:57:56+00:00
+#   timestamp: 2025-06-23T07:09:39+00:00
 
 from __future__ import annotations
 
@@ -34,7 +34,7 @@ class ApiError(BaseModel):
     instance: Optional[str] = None
 
 
-class ConfClasses(BaseModel):
+class ConformanceDeclaration(BaseModel):
     conformsTo: list[str]
 
 
@@ -142,7 +142,7 @@ class InlineValue(
     root: Union[bool, bytes, str, int, float, list, dict[str, Any], Bbox]
 
 
-class LandingPage(BaseModel):
+class Capabilities(BaseModel):
     title: Optional[str] = Field(None, examples=["Example processing server"])
     description: Optional[str] = Field(
         None,
