# s2gos/server/service.py
@@ -1,16 +1,16 @@
 # generated by gen_server.py:
 #   filename:  service.py:
-#   timestamp: 2025-06-22T20:18:13.691438
+#   timestamp: 2025-06-23T09:10:09.387879
 
 from abc import ABC, abstractmethod
 
 from fastapi.responses import JSONResponse
 
 from s2gos.common.models import (
-    ConfClasses,
+    Capabilities,
+    ConformanceDeclaration,
     JobInfo,
     JobList,
-    LandingPage,
     ProcessDescription,
     ProcessList,
     ProcessRequest,
@@ -20,27 +20,27 @@ from s2gos.common.models import (
 
 class Service(ABC):
     @abstractmethod
-    async def get_landing_page(self) -> JSONResponse | LandingPage:
+    async def get_landing_page(self) -> Capabilities | JSONResponse:
         pass
 
     @abstractmethod
-    async def get_conformance_classes(self) -> JSONResponse | ConfClasses:
+    async def get_conformance_classes(self) -> JSONResponse | ConformanceDeclaration:
         pass
 
     @abstractmethod
-    async def get_processes(self) -> JSONResponse | ProcessList:
+    async def get_processes(self) -> ProcessList | JSONResponse:
         pass
 
     @abstractmethod
     async def get_process_description(
         self, process_id: str
-    ) -> JSONResponse | ProcessDescription:
+    ) -> ProcessDescription | JSONResponse:
         pass
 
     @abstractmethod
     async def execute(
         self, process_id: str, request: ProcessRequest
-    ) -> JSONResponse | JobInfo:
+    ) -> JobInfo | JSONResponse:
         pass
 
     @abstractmethod
@@ -48,13 +48,13 @@ class Service(ABC):
         pass
 
     @abstractmethod
-    async def get_status(self, job_id: str) -> JSONResponse | JobInfo:
+    async def get_status(self, job_id: str) -> JobInfo | JSONResponse:
         pass
 
     @abstractmethod
-    async def dismiss(self, job_id: str) -> JSONResponse | JobInfo:
+    async def dismiss(self, job_id: str) -> JobInfo | JSONResponse:
         pass
 
     @abstractmethod
-    async def get_result(self, job_id: str) -> JSONResponse | ProcessResults:
+    async def get_result(self, job_id: str) -> ProcessResults | JSONResponse:
         pass
